--- a/index.html
+++ b/index.html
@@ -1,2 +1,4 @@
-<h1>Test TEST</h1>
+<h1>Hi there</h1>
 <h2> If you can see this i guess the site is working</h2>
+<h3>Stuffies im creating</h3>
+<h4>1.(mabye) Nintendo TV3i 2. Wii U Menu dark mode Autoboot 3. microCard Video</h4>
