--- a/fridgehax/index.html
+++ b/fridgehax/index.html
@@ -1,7 +1,7 @@
 <html lang="en-US"><head>
     <meta charset="UTF-8">
     <title>FridgeHaxxx</title>
-    <link rel="stylesheet" type="text/css" href="../styles.css">
+    <link rel="stylesheet" type="text/css" href="https://github.com/microCardtm/microcardtm.github.io/raw/master/fridgehax/styles.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <script language="javascript">
         function changeText(idElement) {
@@ -15,7 +15,7 @@
 <body><br>
     <center><img src="https://images.samsung.com/is/image/samsung/p5/in/refrigerators/french-door-refrigerator.png?$ORIGIN_PNG$" alt="Logo"></center>
     <br>
-    <center><a href="http://u.wiidb.de/index-hax.php" id="element1" class="myButton" onclick="javascript:changeText(1)">Run Homebrew Launcher!</a></center>
+    <center><a href="http://microcardtm.github.io/payloads/fridgehax id="element1" class="myButton" onclick="javascript:changeText(1)">Run Homebrew Launcher!</a></center>
 
 
 
