--- a/fridgehax/index.html
+++ b/fridgehax/index.html
@@ -15,7 +15,7 @@
 <body><br>
     <center><img src="https://images.samsung.com/is/image/samsung/p5/in/refrigerators/french-door-refrigerator.png?$ORIGIN_PNG$" alt="Logo"></center>
     <br>
-    <center><a href="http://microcardtm.github.io/payloads/fridgehax id="element1" class="myButton" onclick="javascript:changeText(1)">Run Homebrew Launcher!</a></center>
+    <center><a href="http://microcardtm.github.io/payloads/fridgehax" id="element1" class="myButton" onclick="javascript:changeText(1)">Run Homebrew Launcher!</a></center>
 
 
 
