--- a/fridgehax/index.html
+++ b/fridgehax/index.html
@@ -1,7 +1,7 @@
 <html lang="en-US"><head>
     <meta charset="UTF-8">
     <title>FridgeHaxxx</title>
-    <link rel="stylesheet" type="text/css" href="https://github.com/microCardtm/microcardtm.github.io/raw/master/fridgehax/styles.css">
+    <link rel="stylesheet" type="text/css" href="../fridgehax/style.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <script language="javascript">
         function changeText(idElement) {
