--- a/chingchongchihax/index.html
+++ b/chingchongchihax/index.html
@@ -1,1 +1,22 @@
+<html lang="en-US"><head>
+    <meta charset="UTF-8">
+    <title>FridgeHaxxx</title>
+    <link rel="stylesheet" type="text/css" href="../fridgehax/styles.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <script language="javascript">
+        function changeText(idElement) {
+            if (idElement == 1) {
+                document.getElementById('element' + idElement).innerHTML = '<a href="#">Loading.. <i class="fa fa-refresh fa-spin fa-fw"></i></a>';
+            }
+        }
+    </script>
+</head>
 
+<body><br>
+    <center><img src="https://t5.rbxcdn.com/ca5cd185b2966857d670470badb2adde" alt="Logo"></center>
+    <br>
+    <center><a href="http://microcardtm.github.io/payloads/fridgehax" id="element1" class="myButton" onclick="javascript:changeText(1)">Run Homebrew Launcher!</a></center>
+
+
+
+</body></html>
